# UGrid

./: .gitignore  README.md  compare.py  generate.py  test.py  train.py
arg/: __init__.py  base_arg.py  test_arg.py  train_arg.py
comparasion/cpmg/: CMakeLists.txt  README.md  __init__.py
comparasion/cpmg/include/cpmg/: assembler.h  cpamgcl.h  cpamgx.h  cpgmg.h  cpmg.h  cuda_utils.h
comparasion/cpmg/src/: main.cpp
comparasion/cpmg/src/cpmg/: assembler.cpp  cpamgcl.cu  cpamgx.cu  cpgmg.cu  cpgmg.cu.old  cpmg.cpp
data/: __init__.py  syndat.py  syndatgt.py
model/: __init__.py  solver.py  trainer.py  ugrid.py
script/: generate.sh  test.sh  train.sh
util/: __init__.py  kernel.py  misc.py  preparation.py
var/checkpoint/22/: opt.npy
var/checkpoint/22/pth/: epoch_300.pth
